<resources>
    <string name="facebook_app_id">172090051279</string>
    <string name="fb_login_protocol_scheme">fb172090051279</string>

    <string name="progress_dialog">資料讀取中</string>
    <string name="please_wait">請稍候…</string>

    <string name="confirm">確定</string>
    <string name="close">關閉</string>
    <string name="error">發生錯誤</string>

    <string name="dialog_connection_content">糟糕！\n尚未連結網路耶！</string>
    <string name="dialog_connection_positive">開啟網路</string>
    <string name="no_connection_title">無法連線</string>
    <string name="no_connection_content">檢查網路重新載入看看吧！</string>
    <string name="reload">重新載入</string>

    <string name="dialog_finish_content">您要走了嗎？\n再多留一下嘛！</string>
    <string name="dialog_finish_positive">退出</string>
    <string name="dialog_finish_negative">取消</string>

    <string name="dialog_update_content">為了讓您有更好的購物體驗,\n建議您立即更新至最新版本</string>
    <string name="dialog_update_positive">立馬前往更新</string>
    <string name="dialog_update_negative">下次再說</string>

    <string name="dialog_push_negative">含淚關閉</string>
    <string name="dialog_push_positive">立即前往</string>

    <string name="hint_no_google_service">此手機不支援Google Service, \n將收不到優惠活動即時訊息。</string>
    <string name="is_new">新品上架</string>
    <string name="is_72_hours">72H到貨</string>
    <string name="is_convenience_store">超取付款</string>
    <string name="discount">折扣</string>
    <string name="disc">折</string>
    <string name="up">起</string>
    <string name="category">分類</string>
    <string name="action_search">搜尋</string>
    <string name="action_cart">購物車</string>
    <string name="action_news">即時訊息</string>
    <string name="i_want_buy">我要買</string>
    <string name="price_fake">原價</string>
    <string name="dollars">元</string>
    <string name="favor">最愛</string>
    <string name="add_cart">加入購物車</string>
    <string name="buy_now">立即訂購</string>
    <string name="desc">說明</string>
    <string name="return_notice">退換需知</string>
    <string name="specification">規格</string>

    <string name="characteristic">商品特色</string>
    <string name="buy_reason">非買不可的理由</string>
    <string name="made_in">原產地</string>
    <string name="itemState">商品狀態</string>
    <string name="expect_deliver">出貨注意事項</string>
    <string name="expect_deliver_travel">注意事項</string>

    <string name="home">首頁</string>
    <string name="login_here">來這登入</string>
    <string name="question">常見問題</string>
    <string name="custom_center">客服中心</string>
    <string name="bonus_search">紅利查詢</string>
    <string name="bonus_exchange">紅利超值換</string>
    <string name="order_search_guest">非會員訂單查詢</string>
    <string name="order_search_member">會員訂單查詢</string>
    <string name="favor_list">追蹤清單</string>
    <string name="qa_history">問答紀錄</string>
    <string name="profile">我的資料</string>
    <string name="shopping_history">購物金紀錄</string>
    <string name="logout">含淚登出</string>
    <string name="notice">最新消息</string>
    <string name="notification_setting">通知設定</string>
    <string name="activate_notification">已開啟通知</string>
    <string name="deactivate_notification">已關閉通知</string>
    <string name="login_failure">登入失敗</string>
    <string name="added_cart">已加入購物車！</string>
    <string name="promote_list">我的折扣包</string>
    <string name="credit">信用卡優惠</string>
    <string name="news_title">最新公告</string>
    <string name="promote_content">結帳時輸入%1$s可享%2$s折</string>
    <string name="only_member">會員專屬</string>
    <string name="yes">好的</string>
    <string name="promote_password">通關密語</string>
    <string name="copy_password">複製密語</string>
    <string name="down_discount">下殺</string>
    <string name="notax">稅外</string>
    <string name="nextTime">下次請早</string>
    <string name="contact_1">★如需專人服務請電洽</string>
    <string name="contact_2">02-7731-2055</string>
    <string name="contact_3">LINE好友：cs_tm8</string>
    <string name="not_sale">商品尚未開賣</string>
    <string name="surplus">剩餘</string>
    <string name="hour">時</string>
    <string name="minute">分</string>
    <string name="second">秒</string>
    <string name="added_track">加入追蹤清單成功</string>
    <string name="deleted_track">取消追蹤完成</string>
    <string name="checkout_input">結帳輸入</string>
    <string name="have_disc">可享</string>
    <string name="click_get_password">點我獲得密語</string>
    <string name="click_see_detail">點我看詳情</string>
    <string name="checkout">結帳</string>
    <string name="promote_type_1">折扣活動</string>
    <string name="promote_type_2">結帳總額</string>
    <string name="promote_content_1">可享%1$s折</string>
    <string name="promote_content_2">滿%1$s現抵%2$s</string>
    <string name="promote_content_3">最高折%1$s</string>
    <string name="promote_type_3">滿額折扣</string>
    <string name="top">TOP</string>
    <string name="youMayInteresting">你可能會有興趣的</string>
    <string name="choice_child_tag">請選擇次分類</string>
    <string name="bonus_amt">可獲得%s點</string>
    <string name="version">版本</string>
    <string name="devel_site">測試站</string>
    <string name="loading">正在載入中</string>
    <string name="loading_content">人客啊～要麻煩你重整一下</string>
    <string name="search_hint">搜尋商品</string>
    <string name="accuracy">準確度</string>
    <string name="price_up">價格低→高</string>
    <string name="price_down">價格高→低</string>
    <string name="item_count">共%1$d筆</string>
    <string name="hot_search">熱門搜尋</string>
    <string name="topic_title">精選主題</string>
    <string name="follow_title">最多人關注</string>
    <string name="search_nothing">抱歉，找不到\"%s\"相關商品，建議可改用其他關鍵字重新搜尋。</string>
    <string name="favorite">收藏</string>
    <string name="share">分享</string>
    <string name="sales_title">優惠方案</string>
    <string name="most_discount">最划算</string>

    <string name="format_buy_one_price">$%1$d</string>
    <string name="format_buy_one_unit">%1$d%2$s</string>
    <string name="format_buy_one_discount">-</string>
    <string name="format_buy_more_unit">%1$d~%2$d%3$s</string>
    <string name="format_most_discount_unit">%1$d%2$s以上</string>
    <string name="average">平均</string>
    <string name="save_now">現省</string>
    <string name="use_coupon">使用折價券</string>
    <string name="product_id">產品編號</string>
    <string name="expand_down">閱讀完整內容</string>
    <string name="expand_up">收起來</string>
    <string name="more">更多</string>
    <string name="devel_site_key">19120623</string>
    <string name="order_notice_title">可訂購通知</string>
    <string name="order_notice_info">*此功能為提示通知，無法保留商品</string>
    <string name="order_notice_me">可訂購通知我</string>
    <string name="order_notice_me_ready">已加入訂購通知</string>
    <string name="order_notice_content">感謝買客的支持，老闆已出門補貨，待商品到貨會立即通知，同時商品也自動加入買客的「追蹤清單」囉。</string>
    <string name="send">送出</string>
    <string name="please_input_mail">請輸入E-MAIL</string>
    <string name="please_input_phone">請輸入手機號碼</string>
    <string name="please_input_format">請輸入正確格式</string>
    <string name="please_choose_spec">請選擇規格</string>
    <string name="sale_out">(補貨中)</string>
    <string name="please_select_count">請選擇數量</string>
    <string name="other_spec">選其他款式</string>
    <string name="total">合計:</string>
    <string name="one_spec">單一規格</string>
    <string name="buy_more_discount">多買%1$d%2$s平均$%3$d/%4$s</string>
    <string name="no_selected">還有1%s未選擇</string>
    <string name="specialist_advice">專人訂購</string>
    <string name="please_call_specialist_advice">請撥打專線, 將有專人為您服務</string>
    <string name="specialist_advice_phone_number">02-77312666</string>
    <string name="specialist_advice_number_buy">訂購請按 2</string>
    <string name="call_now">立即撥打</string>
    <string name="specialist_advice_notice">提醒您，專線服務時間\n每周一至五，早上 9 點到晚上 6 點，\n國定假日與例假日，我們休假喔!</string>
    <string name="specialist_advice_message">非服務時間，請線上留言\n我們會盡快與您聯絡</string>
    <string name="message_online">線上留言</string>
    <string name="specialist_advice_product_id">產品編號: %s</string>
    <string name="name">姓名</string>
    <string name="star">*</string>
    <string name="email">Email</string>
    <string name="phone">電話</string>
    <string name="must_put">*必填</string>
    <string name="remark">備註</string>
    <string name="product_name">產品名稱</string>
    <string name="default_cs_service_start_time">09:00:00</string>
    <string name="default_cs_service_end_time">17:00:00</string>
    <string name="specialist_advice_phone_number_travel">02-77312055</string>
    <string name="terminal_gcm_token">GCMToken</string>
    <string name="terminal_service_time">ServiceTime</string>
    <string name="terminal_service_time_start">Start</string>
    <string name="terminal_service_time_end">End</string>
    <string name="title_activity_notification_setting">NotificationSetting</string>
    <string name="go_now">立即前往</string>
    <string name="ok">好的</string>
    <string name="new_notice">最新公告</string>
    <string name="notification_settings_notice">提醒: 若是關閉通知, 將無法即時收到 App 限定搶購優惠</string>
    <string name="back_home">回首頁</string>
    <string name="reloading">重新整理</string>
    <string name="privateKey">sdkec.get15encrypt</string>
    <string name="logout_done">已登出</string>
</resources>
