<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="8dp"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/expectDeliverLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/expectDeliverSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@color/grey_700">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/expect_deliver_travel"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/colorBlackText"/>

        </LinearLayout>

        <WebView
            android:layout_below="@id/expectDeliverSection"
            android:id="@+id/deliverNotice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/colorBlackText"/>

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey_700"
        android:padding="8dp"
        android:text="@string/characteristic"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/colorBlackText"/>

    <WebView
        android:id="@+id/youtobe1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <WebView
        android:id="@+id/youtobe2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc"
        android:padding="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/colorPrimary"/>

    <WebView
        android:id="@+id/textView_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/buy_reason"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/colorPrimary"/>

    <WebView
        android:id="@+id/buyReason"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/made_in"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/colorPrimary"/>

    <TextView
        android:id="@+id/madeIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textColor="@color/colorBlackText"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/itemState"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/colorPrimary"/>

    <TextView
        android:id="@+id/itemState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/colorBlackText"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey_700"
        android:padding="8dp"
        android:text="@string/specification"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/colorBlackText"/>

    <WebView
        android:id="@+id/specification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/colorBlackText"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey_700"
        android:padding="8dp"
        android:text="@string/return_notice"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/colorBlackText"/>

    <WebView
        android:id="@+id/returnNotice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>