<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/addToCart"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_primary"
                    android:padding="16dp"
                    android:text="@string/add_cart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@color/white_text" />

                <Button
                    android:id="@+id/buyNow"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/button_accent"
                    android:padding="16dp"
                    android:text="@string/buy_now"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@color/colorBlackText" />

            </LinearLayout>

            <TextView
                android:id="@+id/notSale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/not_sale"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textSize="@dimen/text_size_normal"
                android:textColor="@color/colorRed_CC0000" />

            <Button
                android:id="@+id/nextTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/next_time"
                android:textColor="@color/colorBlackText" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_marginTop="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/contact_1"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="@dimen/text_size_normal"
                android:textColor="@color/colorBlackText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/contact_2"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="@dimen/text_size_normal"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/contact_3"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="@dimen/text_size_normal"
                android:textColor="@color/colorBlackText" />

        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>
